qttools-opensource-src (5.6.1-4) UNRELEASED; urgency=medium

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 19 Oct 2016 20:43:27 -0300

qttools-opensource-src (5.6.1-3) unstable; urgency=medium

  * Do not build with webkit support on m68k and sh4 (Closes: #840693).
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 16 Oct 2016 19:18:17 -0300

qttools-opensource-src (5.6.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 13 Jun 2016 10:21:01 -0300

qttools-opensource-src (5.6.1-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.
  * Bump Standards-Version to 3.9.8, no changes required.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 10 Jun 2016 18:28:37 -0300

qttools-opensource-src (5.6.0-1) experimental; urgency=medium

  * New upstream release.
  * Update symbols files from buildds’ logs.
  * Bump Qt build-dependencies to 5.6.0.
  * Drop no longer needed hack to fix wrong path in pkgconfig files.
  * Update debian/README.source with actual information.
  * Drop some pre-Jessie Breaks/Replaces.
  * Revert debian/watch to track final releases again.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 22 Mar 2016 22:29:03 +0100

qttools-opensource-src (5.6.0~rc-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump Qt build-dependencies to 5.6.0~rc.
  * Re-enable QtWebKit support.
  * Use recommended https URIs for Vcs fields.
  * Update debian/libqt5clucene5.symbols from the current build log.
  * Bump Standards-Version to 3.9.7, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 06 Mar 2016 18:36:07 +0300

qttools-opensource-src (5.6.0~beta-2) experimental; urgency=medium

  * Add empty override_dh_auto_test-indep target (to prevent the whole qttools
    source from being compiled during indep builds).