@@ -1,5 +1,9 @@
 qttools-opensource-src (5.6.1-4) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Do not install the qwebview plugin on archs that do not have qtwebkit
+    support (Closes: #840693).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 19 Oct 2016 20:43:27 -0300
 
 qttools-opensource-src (5.6.1-3) unstable; urgency=medium
